Fixed top image align css

--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
     width: 100%;
     height: 100vh;
     background-image: url(imgs/logo.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
